Minor styling changes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
 <section class="section intro">
   <section class="inner_corner_top_left"></section>
 
-  <h2 class="intro_title">Intro</h2>
   <p class="intro_text">
     Fascinated by the social and political impact of digital technologies, I have <b>one year of experience programming with a Javascript-based stack</b>, including <b>four months of intensive training</b> as part of <a class="intro_text_link" href="https://www.foundersandcoders.com" target="_blank">Founders & Coders</a>.
     <br/><br/>
@@ -78,33 +77,30 @@
 <section class="section fac">
   <section class="inner_corner_top_left"></section>
 
-  <h2 class="fac_title">Founders & Coders</h2>
+  <a class="fac_link" href="https://www.foundersandcoders.com" target="_blank">
+  <img class="fac_logo" src="assets/fac-logo-312f32.png" alt="Founders & Coders logo"></a>
   <section class="fac_text">
     <h3>Peer-led coding bootcamp: 16-week intensive full-stack JavaScript training focusing on:
     </h3>
     <p>
-    • Applying JavaScript fundamentals in weekly build sprints.<br/>
-    • Hands-on experiences in agile roles: <br/>Scrum Master, Quality Assurance, DevOps, UX & UI.<br/>
-    • Hosting tech meetups and mentoring future students.<br/>
-    • Working with charity product managers to build prototypes.<br/>
-    • Cooperative learning and pair programming, guided by values of cooperation, inclusion and social impact.
+    Applying JavaScript fundamentals in weekly build sprints<br/>
+    Hands-on experiences in agile roles: <br/>Scrum Master, Quality Assurance, DevOps, UX & UI.<br/>
+    Hosting tech meetups and mentoring future students.<br/>
+    Working with charity product managers to build prototypes.<br/>
+    Cooperative learning and pair programming, guided by values of inclusion and social impact.
   </p>
-    <h3>• Methodologies & Skills •</h3>
+    <h3>Methodologies & Skills</h3>
     <p>
-      • Git & GitHub<br/>
-      • Agile & Scrum<br/>
-      • Test-driven development<br/>
-      • Pair programming<br/>
-      • Deployment: Heroku, Netlify<br/>
-      • Authentication: bcrypt<br/>
-      • Accessibility: Aria<br/>
+      Git & GitHub<br/>
+      Agile & Scrum<br/>
+      Test-driven development<br/>
+      Pair programming<br/>
+      Deployment: Heroku, Netlify<br/>
+      Authentication: bcrypt<br/>
+      Accessibility: Aria<br/>
     </p>
   </section>
 
-  <a class="fac_link" href="https://www.foundersandcoders.com" target="_blank">
-  <img class="fac_logo" src="assets/fac-logo-312f32.png" alt="Founders & Coders logo"></a>
-
-  <section class="inner_corner_bottom_right"></section>
 </section>
 
 
