Update Intro text copy Fandango

--- a/index.html
+++ b/index.html
@@ -40,11 +40,16 @@
   <section class="inner_corner_top_left"></section>
 
   <p class="intro_text">
-    Fascinated by the social and political impact of digital technologies, I have <b>one year of experience programming with a Javascript-based stack</b>, including <b>four months of intensive training</b> as part of <a class="intro_text_link" href="https://www.foundersandcoders.com" target="_blank">Founders & Coders</a>.
+    Further to five years’ experience in digital campaigns, marketing, communications, I am fully versed and experienced in <b>programming with a Javascript-based stack<b>, having just completed <a class="intro_text_link" href="https://www.foundersandcoders.com" target="_blank">Founders & Coders</a>’ intensive training programme.
     <br/><br/>
-    Aiming to work on socially-driven projects with collaboration at their heart, <b>I am currently seeking a Junior Developer position in a forward-looking oganisation</b> to develop these skills alongside a team of experienced developers.
+    <b>I am currently seeking a Junior Developer position in a forward-looking and collaborative organisation</b>, to further my skills and capabilities alongside a team of experienced developers.
     <br/><br/>
-    <b>A <i>Sciences Po</i> (PPE) alumni</b>, I have five years of experience in <b>digital communications</b>, leading marketing and promotions campaigns for award-winning festivals.
+    <b>A PPE alumni</b>, I previously worked for award-winning music festivals, including
+    <a class="intro_text_link" href="https://www.theguardian.com/music/2016/aug/30/dimensions-festival-review-larry-heard-keeps-sunburned-crowd-in-thrall" target="_blank">Dimensions</a>,
+    <a class="intro_text_link" href="https://www.residentadvisor.net/reviews/23079" target="_blank">Outlook</a>,
+    <a class="intro_text_link" href="https://https://www.theguardian.com/music/2016/jul/11/sunfall-festival-review-dance-music-jamie-xx-kamasi-washington" target="_blank">Sunfall</a>
+    and <a class="intro_text_link" href="https://www.theguardian.com/music/2019/aug/19/we-out-here-festival-review-jazz-gilles-peterson-abbots-ripton-cambridgeshire" target="_blank">We Out Here</a>.
+    Moving forward I am looking to contribute to projects with social impact at their heart.
   </p>
 
   <section class="inner_corner_bottom_right"></section>
