Fix styling bold

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <section class="inner_corner_top_left"></section>
 
   <p class="intro_text">
-    Further to five years’ experience in digital campaigns, marketing, communications, I am fully versed and experienced in <b>programming with a Javascript-based stack<b>, having just completed <a class="intro_text_link" href="https://www.foundersandcoders.com" target="_blank">Founders & Coders</a>’ intensive training programme.
+    Further to five years’ experience in digital campaigns, marketing, communications, I am fully versed and experienced in <b>programming with a Javascript-based stack</b>, having just completed <a class="intro_text_link" href="https://www.foundersandcoders.com" target="_blank">Founders & Coders</a>’ intensive training programme.
     <br/><br/>
     <b>I am currently seeking a Junior Developer position in a forward-looking and collaborative organisation</b>, to further my skills and capabilities alongside a team of experienced developers.
     <br/><br/>
