Swap CV link and email

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
   <h1 class="top_title">Victor Masson</h1>
   <p class="top_text">Full-stack Javascript developer <br/>and Founders & Coders graduate.</p>
   <section class="top_links">
-    <a class="top_icon_link" id="top_links_cv" href="https://drive.google.com/file/d/1V-NqMhJrAZlGRCYKyN9mqBYTFTC8LcHn/view?usp=sharing" target="_blank">
+    <a class="top_icon_link" id="top_links_cv" href="https://drive.google.com/file/d/1BM7Jz3Ir6Ql7tPv7ccRhhJl6EH4pR0w1/view?usp=sharing" target="_blank">
       <img class="top_icon_img" src="assets/cv.png" alt="View CV"></a>
     <a class="top_icon_link" id="top_links_github" href="https://github.com/victormasson21" target="_blank">
       <img class="top_icon_img" src="assets/github.png" alt="Visit Github profile"></a>
     <a class="top_icon_link" id="top_links_contact" href="#">
       <img class="top_icon_img" src="assets/envelop.png" alt="Contact me"></a>
   </section>
-  <p class="top_contact_none" >victormasson21@gmail.com</p>
+  <p class="top_contact_none" >victormassondev@gmail.com</p>
 
   <section class="inner_corner_bottom_right"></section>
 </section>
@@ -123,13 +123,13 @@
     <section class="projects_block">
       <h2>NomNom</h2>
       <p>A web app to find and create weekly meal plans that use common ingredients in order to combat food waste. Created with Node, Express and Handlebars. Role: Scrum master.</p>
-      <a href="https://github.com/fac-17/NomNom" target="_blank">Project repo</a>
+      <a href="https://github.com/fac-17/NomNom" target="_blank">Github Repo</a>
     </section>
 
     <section class="projects_block">
       <h2>Autsera</h2>
       <p>A game prototype to help children with mild autism read facial expressions and develop social skills. Created with Node, Express and Handlebars. Role: Quality Assurance.</p>
-      <a href="https://github.com/victormasson21" target="_blank">Project repo</a>
+      <a href="https://github.com/victormasson21" target="_blank">Github Repo</a>
     </section>
 
     <img class="projects_image" id="autsera" src="assets/projects/autsera-vertical.png" alt="Austera screenshot">
@@ -139,14 +139,14 @@
     <section class="projects_block">
       <h2>Chronicles</h2>
       <p>A react app hosting a non-exhaustive chronicle of the past three years through striking quotes. Created with Node, React, Express and Airtable.</p>
-      <a href="https://github.com/victormasson21" target="_blank">Project repo</a>
+      <a href="https://github.com/victormasson21" target="_blank">Github Repo</a>
     </section>
 
 
     <section class="projects_block">
       <h2>Hack The Press</h2>
       <p>Coming soon.</p>
-      <a href="https://github.com/victormasson21" target="_blank">Project repo</a>
+      <a href="https://github.com/victormasson21" target="_blank">Github Repo</a>
     </section>
 
     <img class="projects_image" id="hackthepress" src="assets/projects/projectfear.png" alt="Project Fear screenshot">
