Change projects text + bold

--- a/index.html
+++ b/index.html
@@ -15,151 +15,155 @@
 <body class="body">
 
   <section class="section top">
-  <section class="inner_corner_top_left"></section>
+    <section class="inner_corner_top_left"></section>
 
-  <h1 class="top_title">Victor Masson</h1>
-  <p class="top_text">Full-stack Javascript developer <br/>and Founders & Coders graduate.</p>
-  <section class="top_links">
-    <a class="top_icon_link" id="top_links_cv" href="https://drive.google.com/file/d/1BM7Jz3Ir6Ql7tPv7ccRhhJl6EH4pR0w1/view?usp=sharing" target="_blank">
-      <img class="top_icon_img" src="assets/cv.png" alt="View CV"></a>
-    <a class="top_icon_link" id="top_links_github" href="https://github.com/victormasson21" target="_blank">
-      <img class="top_icon_img" src="assets/github.png" alt="Visit Github profile"></a>
-    <a class="top_icon_link" id="top_links_contact" href="#">
-      <img class="top_icon_img" src="assets/envelop.png" alt="Contact me"></a>
-  </section>
-  <p class="top_contact_none" >victormassondev@gmail.com</p>
+    <h1 class="top_title">Victor Masson</h1>
+    <p class="top_text">Full-stack Javascript developer <br />and Founders & Coders graduate.</p>
+    <section class="top_links">
+      <a class="top_icon_link" id="top_links_cv" href="https://drive.google.com/file/d/1BM7Jz3Ir6Ql7tPv7ccRhhJl6EH4pR0w1/view?usp=sharing" target="_blank">
+        <img class="top_icon_img" src="assets/cv.png" alt="View CV"></a>
+      <a class="top_icon_link" id="top_links_github" href="https://github.com/victormasson21" target="_blank">
+        <img class="top_icon_img" src="assets/github.png" alt="Visit Github profile"></a>
+      <a class="top_icon_link" id="top_links_contact" href="#">
+        <img class="top_icon_img" src="assets/envelop.png" alt="Contact me"></a>
+    </section>
+    <p class="top_contact_none">victormassondev@gmail.com</p>
 
-  <section class="inner_corner_bottom_right"></section>
-</section>
-
-
-
-
-
-<section class="section intro">
-  <section class="inner_corner_top_left"></section>
-
-  <p class="intro_text">
-    Further to five years’ experience in digital campaigns, marketing, communications, I am fully versed and experienced in <b>programming with a Javascript-based stack</b>, having just completed <a class="intro_text_link" href="https://www.foundersandcoders.com" target="_blank">Founders & Coders</a>’ intensive training programme.
-    <br/><br/>
-    <b>I am currently seeking a Junior Developer position in a forward-looking and collaborative organisation</b>, to further my skills and capabilities alongside a team of experienced developers.
-    <br/><br/>
-    <b>A PPE alumni</b>, I previously worked for award-winning music festivals, including
-    <a class="intro_text_link" href="https://www.theguardian.com/music/2016/aug/30/dimensions-festival-review-larry-heard-keeps-sunburned-crowd-in-thrall" target="_blank">Dimensions</a>,
-    <a class="intro_text_link" href="https://www.residentadvisor.net/reviews/23079" target="_blank">Outlook</a>,
-    <a class="intro_text_link" href="https://https://www.theguardian.com/music/2016/jul/11/sunfall-festival-review-dance-music-jamie-xx-kamasi-washington" target="_blank">Sunfall</a>
-    and <a class="intro_text_link" href="https://www.theguardian.com/music/2019/aug/19/we-out-here-festival-review-jazz-gilles-peterson-abbots-ripton-cambridgeshire" target="_blank">We Out Here</a>.
-    Moving forward I am looking to contribute to projects with social impact at their heart.
-  </p>
-
-  <section class="inner_corner_bottom_right"></section>
-</section>
-
-
-
-<section class="section techs" display="none">
-  <section class="inner_corner_top_left"></section>
-
-  <h2 class="techs_title">Tech Stack</h2>
-  <section class="techs_images">
-    <img class="tech_logo_img" id="git" src="assets/techlogos/git-logo-312f32.png" alt="Git logo">
-    <img class="tech_logo_img" id="javascript" src="assets/techlogos/javascript-logo-312f32.png" alt="Javascript logo">
-    <img class="tech_logo_img" id="nodejs" src="assets/techlogos/nodejs-logo-312f32.png" alt="Node JS logo">
-    <img class="tech_logo_img" id="express" src="assets/techlogos/express-logo-312f32.png" alt="Express logo">
-    <img class="tech_logo_img" id="react" src="assets/techlogos/react-logo-312f32.png" alt="React logo">
-    <img class="tech_logo_img" id="handlebars" src="assets/techlogos/handlebars-logo-312f32.png" alt="Handlebars logo">
-    <img class="tech_logo_img" id="postgresql" src="assets/techlogos/postgresql-logo-312f32.png" alt="PostgreSQL logo">
-
+    <section class="inner_corner_bottom_right"></section>
   </section>
 
-  <section class="inner_corner_bottom_right"></section>
-</section>
 
 
 
 
+  <section class="section intro">
+    <section class="inner_corner_top_left"></section>
 
-<section class="section fac">
-  <section class="inner_corner_top_left"></section>
-
-  <a class="fac_link" href="https://www.foundersandcoders.com" target="_blank">
-  <img class="fac_logo" src="assets/fac-logo-312f32.png" alt="Founders & Coders logo"></a>
-  <section class="fac_text">
-    <h3>Peer-led coding bootcamp: 16-week intensive full-stack JavaScript training focusing on:
-    </h3>
-    <p>
-    Applying JavaScript fundamentals in weekly build sprints<br/>
-    Hands-on experiences in agile roles: <br/>Scrum Master, Quality Assurance, DevOps, UX & UI.<br/>
-    Hosting tech meetups and mentoring future students.<br/>
-    Working with charity product managers to build prototypes.<br/>
-    Cooperative learning and pair programming, guided by values of inclusion and social impact.
-  </p>
-    <h3>Methodologies & Skills</h3>
-    <p>
-      Git & GitHub<br/>
-      Agile & Scrum<br/>
-      Test-driven development<br/>
-      Pair programming<br/>
-      Deployment: Heroku, Netlify<br/>
-      Authentication: bcrypt<br/>
-      Accessibility: Aria<br/>
+    <p class="intro_text">
+      Further to five years’ experience in digital campaigns, marketing, communications, I am fully versed and experienced in <b>programming with a Javascript-based stack</b>, having just completed <a class="intro_text_link" href="https://www.foundersandcoders.com"
+        target="_blank">Founders & Coders</a>’ intensive training programme.
+      <br /><br />
+      <b>I am currently seeking a Junior Developer position in a forward-looking and collaborative organisation</b>, to further my skills and capabilities alongside a team of experienced developers.
+      <br /><br />
+      <b>A PPE alumni</b>, I previously worked for award-winning music festivals, including
+      <a class="intro_text_link" href="https://www.theguardian.com/music/2016/aug/30/dimensions-festival-review-larry-heard-keeps-sunburned-crowd-in-thrall" target="_blank">Dimensions</a>,
+      <a class="intro_text_link" href="https://www.residentadvisor.net/reviews/23079" target="_blank">Outlook</a>,
+      <a class="intro_text_link" href="https://https://www.theguardian.com/music/2016/jul/11/sunfall-festival-review-dance-music-jamie-xx-kamasi-washington" target="_blank">Sunfall</a>
+      and <a class="intro_text_link" href="https://www.theguardian.com/music/2019/aug/19/we-out-here-festival-review-jazz-gilles-peterson-abbots-ripton-cambridgeshire" target="_blank">We Out Here</a>.
+      Moving forward I am looking to contribute to projects with social impact at their heart.
     </p>
+
+    <section class="inner_corner_bottom_right"></section>
   </section>
 
-</section>
 
 
+  <section class="section techs" display="none">
+    <section class="inner_corner_top_left"></section>
 
+    <h2 class="techs_title">Tech Stack</h2>
+    <section class="techs_images">
+      <img class="tech_logo_img" id="git" src="assets/techlogos/git-logo-312f32.png" alt="Git logo">
+      <img class="tech_logo_img" id="javascript" src="assets/techlogos/javascript-logo-312f32.png" alt="Javascript logo">
+      <img class="tech_logo_img" id="nodejs" src="assets/techlogos/nodejs-logo-312f32.png" alt="Node JS logo">
+      <img class="tech_logo_img" id="express" src="assets/techlogos/express-logo-312f32.png" alt="Express logo">
+      <img class="tech_logo_img" id="react" src="assets/techlogos/react-logo-312f32.png" alt="React logo">
+      <img class="tech_logo_img" id="handlebars" src="assets/techlogos/handlebars-logo-312f32.png" alt="Handlebars logo">
+      <img class="tech_logo_img" id="postgresql" src="assets/techlogos/postgresql-logo-312f32.png" alt="PostgreSQL logo">
 
-<section class="section projects">
-  <section class="inner_corner_top_left"></section>
-
-  <h2 class="projects_title">Projects</h2>
-
-  <section class="projects_mosaic">
-
-    <img class="projects_image" id="nomnom" src="assets/projects/nomnom1.png" alt="NomNom screenshot">
-
-    <section class="projects_block">
-      <h2>NomNom</h2>
-      <p>A web app to find and create weekly meal plans that use common ingredients in order to combat food waste. Created with Node, Express and Handlebars. Role: Scrum master.</p>
-      <a href="https://github.com/fac-17/NomNom" target="_blank">Github Repo</a>
     </section>
 
-    <section class="projects_block">
-      <h2>Autsera</h2>
-      <p>A game prototype to help children with mild autism read facial expressions and develop social skills. Created with Node, Express and Handlebars. Role: Quality Assurance.</p>
-      <a href="https://github.com/victormasson21" target="_blank">Github Repo</a>
+    <section class="inner_corner_bottom_right"></section>
+  </section>
+
+
+
+
+
+  <section class="section fac">
+    <section class="inner_corner_top_left"></section>
+
+    <a class="fac_link" href="https://www.foundersandcoders.com" target="_blank">
+      <img class="fac_logo" src="assets/fac-logo-312f32.png" alt="Founders & Coders logo"></a>
+    <section class="fac_text">
+      <h3>Peer-led coding bootcamp: 16-week intensive full-stack JavaScript training focusing on:
+      </h3>
+      <p>
+        • Applying JavaScript fundamentals in <b>weekly build sprints</b><br />
+        • Hands-on experiences in agile roles: <b>Scrum Master, Quality Assurance, DevOps, UX & UI</b><br />
+        • Hosting tech meetups and mentoring future students.<br />
+        • Working with charity product managers to build prototypes.<br />
+        • Cooperative learning and pair programming, guided by values of inclusion and social impact.
+      </p>
+      <h3>Methodologies & Skills</h3>
+      <p>
+        Git & GitHub<br />
+        Agile & Scrum<br />
+        Test-driven development<br />
+        Pair programming<br />
+        Deployment: Heroku, Netlify<br />
+        Authentication: bcrypt<br />
+        Accessibility: Aria<br />
+      </p>
     </section>
-
-    <img class="projects_image" id="autsera" src="assets/projects/autsera-vertical.png" alt="Austera screenshot">
-
-    <img class="projects_image" id="chronicles" src="assets/projects/chronicles.png" alt="Chronicles screenshot">
-
-    <section class="projects_block">
-      <h2>Chronicles</h2>
-      <p>A react app hosting a non-exhaustive chronicle of the past three years through striking quotes. Created with Node, React, Express and Airtable.</p>
-      <a href="https://github.com/victormasson21" target="_blank">Github Repo</a>
-    </section>
-
-
-    <section class="projects_block">
-      <h2>Hack The Press</h2>
-      <p>Coming soon.</p>
-      <a href="https://github.com/victormasson21" target="_blank">Github Repo</a>
-    </section>
-
-    <img class="projects_image" id="hackthepress" src="assets/projects/projectfear.png" alt="Project Fear screenshot">
 
   </section>
+
+
+
+
+  <section class="section projects">
+    <section class="inner_corner_top_left"></section>
+
+    <h2 class="projects_title">Projects</h2>
+
+    <section class="projects_mosaic">
+
+
+      <img class="projects_image" id="autsera" src="assets/projects/autsera-vertical.png" alt="Austera screenshot">
+
+      <section class="projects_block">
+        <h2>Autsera</h2>
+        <p>A mobile-first game designed to help children with high-functioning autism to read facial expressions and develop social skills. Made to <b>Progressive Web App</b> standards using <b>React</b>, <b>Jest</b> and <b>Sass</b>.
+        </p>
+        <a href="https://github.com/victormasson21" target="_blank">Github Repo</a>
+      </section>
+
+      <section class="projects_block">
+        <h2>NomNom</h2>
+        <p>A web app to find and create weekly meal plans using common ingredients to combat food waste. Made with <b>Express</b>, <b>Handlebars</b> and <b>PostgreSQL</b>.</p>
+        <a href="https://github.com/fac-17/NomNom" target="_blank">Github Repo</a>
+      </section>
+
+
+      <img class="projects_image" id="nomnom" src="assets/projects/nomnom1.png" alt="NomNom screenshot">
+
+      <img class="projects_image" id="chronicles" src="assets/projects/chronicles.png" alt="Chronicles screenshot">
+
+      <section class="projects_block">
+        <h2>Chronicles</h2>
+        <p>A react app hosting a non-exhaustive chronicle of the past three years through striking quotes. Created with <b>Node</b>, <b>React</b>, <b>Express</b> and <b>Airtable</b>.</p>
+        <a href="https://github.com/victormasson21" target="_blank">Github Repo</a>
+      </section>
+
+
+      <section class="projects_block">
+        <h2>Hack The Press</h2>
+        <p>Coming soon.</p>
+        <a href="https://github.com/victormasson21" target="_blank">Github Repo</a>
+      </section>
+
+      <img class="projects_image" id="hackthepress" src="assets/projects/projectfear.png" alt="Project Fear screenshot">
+
+    </section>
 
     <a class="projects_button projects_button_link" href="https://github.com/victormasson21" target="_blank">Github Profile
-    <img class="projects_button_img" src="assets/github.png" alt="Visit Github profile">
+      <img class="projects_button_img" src="assets/github.png" alt="Visit Github profile">
     </a>
 
 
-  <section class="inner_corner_bottom_right"></section>
-</section>
+    <section class="inner_corner_bottom_right"></section>
+  </section>
 
 
   <script type="text/javascript" src="script.js"></script>
